--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,8 @@
    --white: #FFF;
    --gray-50: #E1E1E1;
    --gray-300: #A8A8B3;
+   --gray-800: #29292E;
+   --gray-850: #1f2729;
    --gray-900: #121214;
 
    --cyan-500: #61EAFB;
